--- a/src/main/resources/templates/person-creation.html
+++ b/src/main/resources/templates/person-creation.html
@@ -1,65 +1,59 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="UTF-8">
-  <title>Book borrow management</title>
+    <meta charset="UTF-8">
+    <title>Book borrow management</title>
 
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 
-  <!-- jQuery library -->
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
+    <!-- jQuery library -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
 
-  <!-- Popper JS -->
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <!-- Popper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 
-  <!-- Latest compiled JavaScript -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </head>
 <body>
 
 <div class="container">
-  <div class="row text-center mb-5">
-    <div class="col">
-      <h1>Đây là trang quản lý người duùng</h1>
+    <div class="row text-center mb-5">
+        <div class="col">
+            <h1>Đây là trang tạo người dùng</h1>
+        </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col">
-      <form method="POST" th:action="@{/create-person}" th:object="${nguoiMuonThemMoi}">
-        <div class="form-group">
-          <label for="name">Name:</label>
-          <input type="text" class="form-control" placeholder="Enter name" id="name"
-                 th:field="*{name}">
+    <div class="row">
+        <div class="col">
+            <form method="POST" th:action="@{/create-person}" th:object="${nguoiMuonThemMoi}">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" class="form-control" placeholder="Enter name" id="name"
+                           th:field="*{name}">
+                </div>
+                <div class="form-group">
+                    <label for="address">Address:</label>
+                    <input type="text" class="form-control" placeholder="Enter address"
+                           th:field="*{address}" id="address">
+                </div>
+                <div class="form-group">
+                    <label for="date">Birth:</label>
+                    <input type="text" name="date" class="form-control" placeholder="Enter birth:yyyy-MM-dd"
+                           id="date" th:field="*{birth}">
+                </div>
+
+                <div class="form-group">
+                    <label for="gender">Gender:</label>
+                    <input type="text" class="form-control" placeholder="Enter gender" id="gender" th:field="*{gender}">
+                </div>
+                <button type="submit" class="btn btn-primary">Save</button>
+                <a class="btn btn-secondary" href="/persons">Back</a>
+            </form>
         </div>
-        <div class="form-group">
-          <label for="author">AUthor:</label>
-          <input type="text" class="form-control" placeholder="Enter author"
-                 th:field="*{address}" id="author">
-        </div>
-        <div class="form-group">
-          <label for="publishedYear">Publish year:</label>
-          <input type="number" class="form-control" placeholder="Enter name"
-                 id="publishedYear" min="1990" th:field="*{birth}"
-                 max="2023">
-        </div>
-        <div class="form-group">
-          <label for="description">Description:</label>
-          <textarea class="form-control" placeholder="Enter description" id="description"
-                    th:field="*{categories}"
-          ></textarea>
-        </div>
-        <div class="form-group">
-          <label for="name">Name:</label>
-          <input type="text" class="form-control" placeholder="Enter name" id="gender">
-        </div>
-        <button type="submit" class="btn btn-primary">Save</button>
-        <a class="btn btn-secondary" href="/books">Back</a>
-      </form>
     </div>
-  </div>
 </div>
 
 </body>
