--- a/src/main/resources/templates/person-creation.html
+++ b/src/main/resources/templates/person-creation.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="form-group">
                     <label for="date">Birth:</label>
-                    <input type="text" name="date" class="form-control" placeholder="Enter birth:yyyy-MM-dd"
+                    <input type="date" name="date" class="form-control" onchange="formatDate()" placeholder="Enter birth:yyyy-MM-dd "
                            id="date" th:field="*{birth}">
                 </div>
 
@@ -55,6 +55,13 @@
         </div>
     </div>
 </div>
-
+<script>
+  function formatDate() {
+    var input = document.getElementById('date').value;
+    var date = new Date(input);
+    var formattedDate = date.getFullYear() + '/' + ('0' + (date.getMonth() + 1)).slice(-2) + '/' + ('0' + date.getDate()).slice(-2);
+    document.getElementById('date').value = formattedDate;
+  }
+</script>
 </body>
 </html>
