--- a/src/main/resources/templates/person-creation.html
+++ b/src/main/resources/templates/person-creation.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="form-group">
                     <label for="date">Birth:</label>
-                    <input type="date" name="date" class="form-control" onchange="formatDate()" placeholder="Enter birth:yyyy-MM-dd "
+                    <input type="date" name="date" class="form-control" placeholder="Enter birth:yyyy-MM-dd "
                            id="date" th:field="*{birth}">
                 </div>
 
