--- a/src/main/resources/templates/person-creation.html
+++ b/src/main/resources/templates/person-creation.html
@@ -44,7 +44,14 @@
                     <input type="date" name="date" class="form-control" placeholder="Enter birth:yyyy-MM-dd "
                            id="date" th:field="*{birth}">
                 </div>
-
+                <div class="form-group">
+                    <label for="category">Category:</label>
+                    <select name="category" class="form-control" id="category" th:field="*{categories}">
+                        <option value="SV">Sinh Viên</option>
+                        <option value="HV">Học Viên</option>
+                        <option value="GV">Giáo Viên</option>
+                    </select>
+                </div>
                 <div class="form-group">
                     <label for="gender">Gender:</label>
                     <input type="text" class="form-control" placeholder="Enter gender" id="gender" th:field="*{gender}">
